--- a/confrence/app/templates/layout.html
+++ b/confrence/app/templates/layout.html
@@ -32,20 +32,27 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="nav-toggle">
 				<ul class="nav navbar-nav">
+                   
 				
                     <!-- Error Removed -->	
 
 					{% if user.is_authenticated %}
 						<!--Error Removed -->
+                           <li><a href="{% url 'logout' %}">Logout</a></li>
+
+
 					{% else %}
 
 						<!--Error Removed -->
+                        <li><a href="{% url 'login' %}">Login</a></li>
 
 
 					{% endif %}
 
 					{% if user.is_staff %}
-						<li><a href="/admin">Administration</a></li>
+                        
+                        <li><a href="/admin">Administration</a></li>
+						
 					{% endif %}
 				</ul>
 			</div>
@@ -53,7 +60,7 @@
 	</nav>
 	<div class="container">
 		<div class="jumbotron">
-			<h2>Welcome to AdventureWorks Conference!</h2>
+			<h2>Lingaya's University Auditorium Schedule</h2>
 		</div>
 		{% if warning %}
 			<div class="alert alert-warning alert-dismissable">
