--- a/confrence/app/templates/layout.html
+++ b/confrence/app/templates/layout.html
@@ -33,7 +33,7 @@
 			<div class="collapse navbar-collapse" id="nav-toggle">
 				<ul class="nav navbar-nav">
                    
-				
+				<li><a href="{% url 'sessions_list' %}">Sessions</a></li>
                     <!-- Error Removed -->	
 
 					{% if user.is_authenticated %}
